Closed Bug 1903578 Opened 4 months ago Closed 3 months ago

FOG: Incorrect type used when iterating through ping name lookups

Categories

(Toolkit :: Telemetry, defect, P1)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox129 --- fixed

People

(Reporter: janerik, Assigned: janerik)

References

Details

Attachments

(1 file)

No description provided.

ping_entry_t is a uint32_t.
It worked by accident so far, because by sheer luck the index was on the
lower bits already.
It won't be anymore when more pings are added and then breaks as we
start reading from the middle of the lookup array.

No new test, but test_JOG.js breaks in test_enumerable_names once a
new ping is added.

Pushed by jrediger@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c4b7ce8c3cda Use the correct type alias when iterating to avoid truncation r=chutten
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: