Bug 1903578 - Use the correct type alias when iterating to avoid truncation r=chutten

`ping_entry_t` is a `uint32_t`.
It worked by accident so far, because by sheer luck the index was on the
lower bits already.
It won't be anymore when more pings are added and then breaks as we
start reading from the middle of the lookup array.

No new test, but `test_JOG.js` breaks in `test_enumerable_names` once a
new ping is added.

Differential Revision: https://phabricator.services.mozilla.com/D214271